Set up express basic workflow

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   
-  <h1>Hellos! This is boilerplate code for your new awesome app on vanillaJS + Express stack.</h1>
+  <h1>Hello! This is boilerplate code for your new awesome app on vanillaJS + Express stack.</h1>
+
+  <p id="api-message"></p>
 
   <%= htmlWebpackPlugin.options.liveReloadScript %>
 </body>
